--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+      
+      - name: Install required R packages
+        run: |
+          Rscript -e 'install.packages(c("rmarkdown", "knitr"), repos="https://cran.r-project.org")'
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
